# pkg-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Readme.md  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: pr-checks.yml
.setup/: setup-windows.sh
proc-macros/: Cargo.toml
src/: lib.rs
src/config/: loader.rs
src/errors/: already_exists.rs  conv.rs  mod.rs  not_found.rs
src/server/: mod.rs
src/server/axum/: mod.rs
src/server/axum/common_routes/: graphql.rs  mod.rs
src/telemetry/: mod.rs
src/token/: mod.rs
src/utils/: mod.rs  phone.rs  user_agent.rs
