[package]
name = "pkg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
config = "0.13.3"
dotenv = "0.15.0"

serde = { version = "1.0.160", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }

[features]
config = []