[package]
name = "pkg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", optional = true }
config = { version = "0.13.3", optional = true }
dotenv = { version = "0.15.0", optional = true }
tracing-log = { version = "0.1.3", optional = true }

serde = { version = "1.0.160", features = ["derive"], optional = true }
strum = { version = "0.24.1", features = ["derive"], optional = true }
tracing = { version = "0.1.37", features = ["log"], optional = true }
tracing-subscriber = { version = "0.3.16", features = ["json"], optional = true }

proc-macros.path = "./proc-macros"

[features]
default = []

config = ["anyhow", "config/default", "dotenv", "serde/derive", "strum/derive"]
telemetry = ["serde/derive", "strum/derive", "tracing/log", "tracing-log", "tracing-subscriber/json"]
