[package]
name = "pkg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.7", optional = true }
async-graphql-axum = { version = "5.0.7", optional = true }
axum = { version = "0.6.12", optional = true }
config = { version = "0.13.3", optional = true }
diesel = { version = "2.1.0", optional = true }
dotenv = { version = "0.15.0", optional = true }
hmac = { version = "0.12.1", optional = true }
jwt = { version = "0.16.0", optional = true }
phonenumber = { version = "0.3.2", optional = true }
sha2 = { version = "0.10.7", optional = true }
tracing-log = { version = "0.1.3", optional = true }
fast_uaparser = { version = "2.0.1", optional = true }

serde = { version = "1.0.160", features = ["derive"], optional = true }
strum = { version = "0.25.0", features = ["derive"], optional = true }
tokio = { version = "1.27.0", features = ["signal", "macros"], optional = true }
tracing = { version = "0.1.37", features = ["log"], optional = true }
tracing-subscriber = { version = "0.3.16", features = ["json"], optional = true }

proc-macros-rs.git = "https://github.com/rctrj/proc-macros-rs.git"

[features]
default = ["tracing/log"]

server = ["async-graphql", "async-graphql-axum", "axum", "serde/derive", "tokio/signal", "tokio/macros"]
conf = ["config/default", "dotenv", "serde/derive", "strum/derive"]
telemetry = ["serde/derive", "strum/derive", "tracing/log", "tracing-log", "tracing-subscriber/json", "conf"]
token = ["hmac", "jwt", "serde", "sha2"]
